tests/ui/feature-gates/crablangc-private.rs
// gate-test-crablangc_private

extern crate libc; //~ ERROR  use of unstable library feature 'crablangc_private'

fn main() {}
